1.0/_sources/reference/kconfig/index.rst.txt
.. _configuration:

Configuration Symbol Reference
##############################

Introduction
************

Kconfig files describe the configuration symbols supported in the build
system, the logical organization and structure that group the symbols in menus
and sub-menus, and the relationships between the different configuration
symbols that govern the valid configuration combinations.

The Kconfig files are distributed across the build directory tree. The files
are organized based on their common characteristics and on what new symbols
they add to the configuration menus.

The configuration options' information below is extracted directly from
:program:`Kconfig`. Click on
the option name in the table below for detailed information about each option.

Supported Options
*****************

.. list-table:: Alphabetized Index of Configuration Options
   :header-rows: 1

   * - Kconfig Symbol
     - Description
   * - :option:`CONFIG_BOARD`
     - Target board
   * - :option:`CONFIG_COM_BASE`
     - Base address of the vuart port
   * - :option:`CONFIG_COM_IRQ`
     - IRQ of the vuart port
   * - :option:`CONFIG_CONSOLE_LOGLEVEL_DEFAULT`
     - Default loglevel on the serial console
   * - :option:`CONFIG_DEFCONFIG_LIST`
     - 
   * - :option:`CONFIG_DMAR_PARSE_ENABLED`
     - Enable ACPI DMA Remapping tables parsing
   * - :option:`CONFIG_ENFORCE_VALIDATED_ACPI_INFO`
     - Enforce the use of validated ACPI info table
   * - :option:`CONFIG_GPU_SBDF`
     - Segment, Bus, Device, and function of the GPU
   * - :option:`CONFIG_HEAP_SIZE`
     - Capacity of the heap for malloc()
   * - :option:`CONFIG_HV_RAM_SIZE`
     - Size of the RAM region used by the hypervisor
   * - :option:`CONFIG_HV_RAM_START`
     - 2M-aligned Start physical address of the RAM region used by the hypervisor
   * - :option:`CONFIG_INDUSTRY`
     - Industry VMs
   * - :option:`CONFIG_IOMMU_BUS_NUM`
     - Highest PCI bus ID used during IOMMU initialization
   * - :option:`CONFIG_L1D_FLUSH_VMENTRY_ENABLED`
     - Enable L1 cache flush before VM entry
   * - :option:`CONFIG_LOGICAL_PARTITION`
     - Logical Partition VMs
   * - :option:`CONFIG_LOG_BUF_SIZE`
     - Capacity of logbuf for each physical cpu
   * - :option:`CONFIG_LOG_DESTINATION`
     - Bitmap of consoles where logs are printed
   * - :option:`CONFIG_LOW_RAM_SIZE`
     - Size of the low RAM region
   * - :option:`CONFIG_MALLOC_ALIGN`
     - Block size in the heap for malloc()
   * - :option:`CONFIG_MAX_EMULATED_MMIO_REGIONS`
     - Maximum number of emulated MMIO regions
   * - :option:`CONFIG_MAX_IOAPIC_NUM`
     - Maximum number of IO-APICs
   * - :option:`CONFIG_MAX_IOMMU_NUM`
     - Maximum number of IOMMU devices
   * - :option:`CONFIG_MAX_IR_ENTRIES`
     - Maximum number of Interrupt Remapping Entries
   * - :option:`CONFIG_MAX_MSIX_TABLE_NUM`
     - Maximum number of MSI-X tables per device
   * - :option:`CONFIG_MAX_PCI_DEV_NUM`
     - Maximum number of PCI devices
   * - :option:`CONFIG_MAX_PCPU_NUM`
     - Maximum number of PCPU
   * - :option:`CONFIG_MAX_PT_IRQ_ENTRIES`
     - Maximum number of interrupt source for PT devices
   * - :option:`CONFIG_MAX_VCPUS_PER_VM`
     - Maximum number of VCPUs per VM
   * - :option:`CONFIG_MEM_LOGLEVEL_DEFAULT`
     - Default loglevel in memory
   * - :option:`CONFIG_NPK_LOGLEVEL_DEFAULT`
     - Default loglevel for the hypervisor NPK log
   * - :option:`CONFIG_PLATFORM_RAM_SIZE`
     - Size of the physical platform RAM
   * - :option:`CONFIG_RELEASE`
     - Release build
   * - :option:`CONFIG_RELOC`
     - Enable hypervisor relocation
   * - :option:`CONFIG_SDC`
     - Software Defined Cockpit
   * - :option:`CONFIG_SERIAL_LEGACY`
     - Legacy
   * - :option:`CONFIG_SERIAL_PCI`
     - PCI
   * - :option:`CONFIG_SERIAL_PCI_BDF`
     - BDF of serial PCI device
   * - :option:`CONFIG_SERIAL_PIO_BASE`
     - Base address of serial PIO region
   * - :option:`CONFIG_SOS_RAM_SIZE`
     - Size of the Service OS (SOS) RAM
   * - :option:`CONFIG_STACK_SIZE`
     - Capacity of one stack, in bytes
   * - :option:`CONFIG_UOS_RAM_SIZE`
     - Size of the User OS (UOS) RAM
